module10/deploy-harbor-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-harbor-nginx
  namespace: learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-nginx
  template:
    metadata:
      labels:
        app: harbor-nginx
    spec:
      imagePullSecrets:
        - name: local-harbor
      containers:
        - name: harbor-nginx
          imagePullPolicy: Always
          image: core.harbor.domain/httpserver/nginx
          ports:
            - containerPort: 80
